src/tess/tl/test/pass/test_strcmp.tl
#module main
#import <string.tl>

main() {
    s1 := c"hello"
    s2 := c"hello"
    c_strcmp(s1, s2)
}
