src/tess/tl/test/fail/test_fail_integer_directed_standalone_uint_to_csize.tl
#module main

accept_csize(x: CSize) -> CSize { x }

main() {
    x: UInt := 42u
    accept_csize(x)
    0
}
